--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,8 @@
 .DS_Store
 
 # Jekyll build
-/_site/
-.jekyll-metadata
-Gemfile.lock
+node_modules
 
-# webstorm
-.idea/
+scraper.js
 
-# others
-*.swp
+csvs
